# portfolio-growth-engine

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml  railway.json  requirements.txt
.github/workflows/: test.yml
data/: goals.yaml  portfolio.yaml
frontend/: README.md  next.config.ts  package-lock.json  package.json  providers.tsx  vitest.config.ts
frontend/app/: globals.css  layout.tsx
frontend/contexts/: auth-context.tsx
frontend/hooks/: use-journal.ts  use-portfolio.ts
frontend/lib/: api.ts  financial.test.ts  financial.ts  format.test.ts  format.ts
frontend/services/: market-data.ts  portfolio.ts
frontend/types/: index.ts
notebooks/: portfolio_analysis.ipynb
plans/: BACKLOG.md  ROADMAP.md  SPRINT_LOG.md
scripts/: seed_portfolio_from_yaml.py
src/: allocator.py  analyzer.py  app.py  auth.py  cli.py  config.py  csv_import.py  db_portfolio.py  decisions.py  goal_tracker.py  journal.py  market_data.py  models.py  portfolio.py  price_cache.py  reports.py  screener.py  tasks.py  worker.py
src/api/: __init__.py  auth_routes.py  data_routes.py  journal_routes.py  portfolio_routes.py  research_routes.py
src/collectors/: base.py  finnhub_collector.py  fmp_collector.py  news_collector.py  reddit_collector.py  yahoo_collector.py
src/db/: engine.py  models.py
src/research/: engine.py  vector_store.py
tests/: conftest.py  test_allocator.py  test_analyzer.py  test_api_portfolio.py  test_auth.py  test_csv_import.py  test_db_portfolio.py  test_models.py  test_portfolio_value_series.py  test_yahoo_collector.py
(+15 files in other folders)
