[project]
name = "portfolio-growth-engine"
version = "0.2.0"
description = "Research, analyze, and grow your investment portfolio 1000x"
requires-python = ">=3.11"
dependencies = [
    # --- Existing ---
    "yfinance>=0.2.31",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "tabulate>=0.9.0",
    "matplotlib>=3.7.0",
    "click>=8.1.0",
    "requests>=2.31.0",
    "pyxirr>=0.9.0",

    # --- Layer 1: Data Aggregation ---
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.12.0",

    # --- Layer 2: Research Engine ---
    "openai>=1.12.0",
    "chromadb>=0.4.22",
    "tiktoken>=0.6.0",
    "sentence-transformers>=2.3.0",

    # --- Layer 3 & 4: Decision System ---
    "jinja2>=3.1.0",
]

[project.scripts]
pge = "src.cli:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
